styles.css
:root {
    --text-color: #fdfbfe;
    --bg-color: #040104;
    --primary-button-color: #;
    --primary-button-hover: #ff58c7;
    --primary-button-active: #ac0072;
    --secondary-button-color: #000000;
    --accent-color: #1e0b0c;
}

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
    display: flex;
    width: 100%;
    background-color: var(--bg-color);
    color: var(--text-color);
    font-family: 'Roboto Mono', monospace;
}

.left-side-bar {
    background-image: url(img/bg.jpg);
    background-size: cover;
    background-position-x: center;
    background-repeat: no-repeat;
    height:100vh;
    display: flex;
    flex-direction: column;
    width: 800px;
    box-sizing: border-box;
}

.right-side-bar {
    width: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    margin: 60px 60px 0px 60px;
    gap: 10px;
}

.umbrella-icon {
    padding-bottom: 5px;
}

.github-icon {
    padding-top: 4px;
    padding-right: 3px;
}

h1 {
    font-family: 'Roboto Mono', monospace;
    font-size: 3em;
    font-weight: bold;
    text-align: center;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 0.8em;
}

h4 {
    font-size: 0.7em;
}

.heading {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-bottom: 60px;
}

.text-background {
    width: 100%;
    background: rgba(0, 0, 0, 0.6);
    height: 6em;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 80vh;
    gap:5px;
}

.footer {
    text-align: center;
    margin-top: auto;
    margin-bottom: 5px;
}

.github {
    display: flex;
    justify-content: center;
    margin-bottom: 5px;
}

.sign-up-area {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 10px;
    border: 1px solid var(--primary-button-color);
}

.form-row {
    max-width: 100%;
    display: flex;
    gap: 50px;
    margin-top: 20px;
}

.form-item {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.form-item label {
    margin-bottom: 5px;
}

.form-item input[type='text'],
.form-item input[type='email'] {
    border-radius: 5px;
    padding: 7px;
    font-size: 20px;
    width: 100%;
    box-sizing: border-box;
    box-shadow: none;
}

.form-item input[type='text']:focus,
.form-item input[type='email']:focus {
    box-shadow: none;
    border: 2px solid var(--primary-button-color);
}

.form-item input[type='text']:invalid:not(:placeholder-shown),
.form-item input[type='email']:invalid:not(:placeholder-shown) {
    border: 3px solid red;
    background-color: #ffd0d0;
} 

.form-item input[type='text']:valid,
.form-item input[type='email']:valid{
    border: 3px solid rgb(136, 255, 0);
    background-color: #d6ffd0;
} 

.form-row button {
    font-size: 20px;
    font-weight: bold;

    background-color: var(--primary-button-color);

    border: none;
    border-radius: 3px;

    padding: 10px 40px;
    cursor: pointer;
}

.form-row button:hover {
    background-color: var(--primary-button-hover);
}

.form-row button:active {
    background-color: var(--primary-button-active);
}

a, a:visited {
    color: var(--primary-button-color);
    text-decoration: none;
}

a:hover {
    color: var(--primary-button-hover);
}

a:active {
    color: var(--primary-button-active);
}

@media only screen and (max-width: 825px) {
    body {
        flex-direction: column;
    }
    .left-side-bar {
        height: 20vh;
        width: auto;
    }
    .right-side-bar {
        margin: 5vw 5vw 0 5vw;
        width: 90vw;
    }
    .text-background {
        margin-top: 1vh;
    }
    h1 {
        font-size: 2em;
    }
    h2 {
        font-size: 1em;
    }
    .github {
        margin-top: 150px;
    }
    .form-row {
        gap: 20px;
    }
}

